--- a/index.html
+++ b/index.html
@@ -35,11 +35,83 @@
 
 <body>
     <!-- HEADER -->
-    <header></header>
+    <header>
+        <div class="container">
+            <nav class="navbar navbar-expand-md navbar-dark">
+                <!-- Brand -->
+                <div class="header__logo">
+                    <a class="navbar-brand" href="#">Diner</a>
+                </div>
+
+                <!-- Toggler/collapsibe Button -->
+                <div class="header__right">
+                    <nav class="navbar navbar-expand-sm navbar-dark">
+                        <form class="form-inline" action="/action_page.php">
+                            <input class="header__form form-control mr-sm-2" type="text" placeholder="Search here..">
+                            <i class="header__search fa fa-search"></i>
+                        </form>
+                    </nav>
+                    <i class="header__light-dark fa fa-moon"></i>
+                    <i class="header__searchIcon fa fa-bars"></i>
+                </div>
+
+                <div class="overlay">
+                    <div>
+                        <div class="overlay__text">
+                            <ul class="text-center">
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">About</a></li>
+                                <li><a href="#">Services</a></li>
+                                <li><a href="#">Blog</a></li>
+                                <li><a href="#">404</a></li>
+                                <li><a href="#">Landing Page</a></li>
+                                <li><a href="#">Contact</a></li>
+                                <li><a href="#">Shot Codes</a></li>
+                                <li><a href="#">Email</a></li>
+                            </ul>
+                        </div>
+                        <div class="btn__close">
+                            <i class="fa fa-times"></i>
+                        </div>
+                    </div>
+                </div>
+        </div>
+        </nav>
+        </div>
+    </header>
     <!-- CAROUSEL -->
-    <section class="carousel"></section>
+    <section class="carousel">
+        <div class="container">
+            <h2 class="mb-4">The Only Thing We <br> Love More Than Food <br> Is You!</h2>
+            <p class="mt-3">Lorem ipsum dolor sit amet consectetur ipsum elit. Qui eligendi vitae sit.Ea <br> ipsum sed
+                consequuntur
+                illum facere.</p>
+            <button class="button mt-4">
+                Read More
+                <i class="fa fa-chevron-right"></i>
+            </button>
+        </div>
+    </section>
     <!-- ABOUT US -->
-    <section class="aboutUs"></section>
+    <section class="aboutUs">
+        <div class="container">
+            <div class="row">
+                <div class="title col-lg-5">
+                    <p>About Us</p>
+                    <h2>We found our creative space that is open for you.</h2>
+                </div>
+                <div class="aboutUs__right col-lg-7">
+                    <p>Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula. Semper at
+                        tempufddfel. Lorem ipsum dolor sit amet elit. Non quae, fugiat nihil ad. Lorem ipsum dolor sit
+                        amet. Lorem ipsum init dolor sit, amet elit. Dolor ipsum non velit, culpa!Lorem ipsum init dolor
+                        sit.</p>
+                    <p class="mt-3">Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula.
+                        Semper at tempufddfel. Lorem ipsum dolor sit amet elit. Non quae, fugiat nihil ad. Lorem ipsum
+                        dolor sit amet.</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- RESTAURANTS -->
     <section class="restaurants"></section>
     <!-- NEW -->
