--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
 <body>
     <!-- HEADER -->
+    <!-- SANG -->
     <header>
         <div class="container">
             <nav class="navbar navbar-expand-md navbar-dark">
@@ -80,6 +81,7 @@
         </div>
     </header>
     <!-- CAROUSEL -->
+    <!-- SANG -->
     <section class="carousel">
         <div class="container">
             <h2 class="mb-4">The Only Thing We <br> Love More Than Food <br> Is You!</h2>
@@ -93,6 +95,7 @@
         </div>
     </section>
     <!-- ABOUT US -->
+    <!-- SANG -->
     <section class="aboutUs">
         <div class="container">
             <div class="row">
@@ -113,10 +116,13 @@
         </div>
     </section>
     <!-- RESTAURANTS -->
+    <!-- SANG -->
     <section class="restaurants"></section>
     <!-- NEW -->
+    <!-- SANG -->
     <section class="new"></section>
     <!-- SERVICE -->
+    <!-- SANG -->
     <section class="service"></section>
     <!-- DELICIOUSNESS -->
     <section class="deliciousness"></section>
