--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
     <!-- MAIN CSS -->
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/responsive.css">
 </head>
 
 <body>
