--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     <!-- SANG -->
     <section class="carousel">
         <div class="container">
-            <h2 class="mb-4">The Only Thing We <br> Love More Than Food <br> Is You!</h2>
-            <p class="mt-3">Lorem ipsum dolor sit amet consectetur ipsum elit. Qui eligendi vitae sit.Ea <br> ipsum sed
+            <h2 class="mb-4">The Only Thing We Love More Than Food Is You!</h2>
+            <p class="mt-3">Lorem ipsum dolor sit amet consectetur ipsum elit. Qui eligendi vitae sit.Ea ipsum sed
                 consequuntur
                 illum facere.</p>
             <button class="button mt-4">
