upload source code by sang

--- a/index.html
+++ b/index.html
@@ -54,10 +54,12 @@
                         </form>
                     </nav>
                     <i class="header__light-dark fa fa-moon"></i>
-                    <i class="header__searchIcon fa fa-bars"></i>
+                    <button class="header__searchIcon js-openMenu">
+                        <i class="fa fa-bars"></i>
+                    </button>
                 </div>
 
-                <div class="overlay">
+                <div class="overlay js-overlay wow animate__animated animate__fadeIn">
                     <div>
                         <div class="overlay__text">
                             <ul class="text-center">
@@ -72,9 +74,9 @@
                                 <li><a href="#">Email</a></li>
                             </ul>
                         </div>
-                        <div class="btn__close">
+                        <button class="btn__close js-btn__close">
                             <i class="fa fa-times"></i>
-                        </div>
+                        </button>
                     </div>
                 </div>
         </div>
@@ -138,6 +140,23 @@
     <!-- BACK TO TOP -->
     <a href="#" class="backToTop"></a>
 
+    <!-- JS -->
+    <script>
+        const openMenu = document.querySelector('.js-openMenu');
+        const overlay = document.querySelector('.js-overlay');
+        const closeMenu = document.querySelector('.js-btn__close');
+
+        function showMenu() {
+            overlay.classList.add("openMenu");
+        }
+
+        function hideMenu() {
+            overlay.classList.remove("openMenu");
+        }
+
+        openMenu.addEventListener('click', showMenu);
+        closeMenu.addEventListener('click', hideMenu);
+    </script>
     <!-- JQUERY -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
         integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
@@ -147,6 +166,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
         crossorigin="anonymous"></script>
+
+    <!-- WOW JS -->
+    <script src="js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
 </body>
 
 </html>
