upload source code by sang

--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
         const closeMenu = document.querySelector('.js-btn__close');
 
         function showMenu() {
-            overlay.classList.add("openMenu");
+            overlay.classList.add("open");
         }
 
         function hideMenu() {
-            overlay.classList.remove("openMenu");
+            overlay.classList.remove("open");
         }
 
         openMenu.addEventListener('click', showMenu);
