upload RESTAURANTS by sang

--- a/index.html
+++ b/index.html
@@ -120,7 +120,47 @@
     </section>
     <!-- RESTAURANTS -->
     <!-- SANG -->
-    <section class="restaurants"></section>
+    <section class="restaurants">
+        <div class="container-fluid px-lg-0">
+            <div class="row align-items-center">
+                <div class="restaurants__left col-lg-6 px-lg-0 pt-lg-0 pt-5">
+                    <div class="restaurants__img">
+                        <img src="./img/banner3.jpg" alt="">
+                    </div>
+                    <div class="overlay"></div>
+                </div>
+                <div class="restaurants__right col-lg-6 px-lg-4 py-lg-3 py-4">
+                    <div class="restaurants__content p-md-5 p-3">
+                        <div class="title">
+                            <p>More than 3000 Restaurants</p>
+                            <h2>Book a table easly at the best price</h2>
+                        </div>
+                        <p class="my-3">Vestibulum ante ipsum primis in faucibus orci luctus turpis sodales quis.
+                            Integer sit amet
+                            mattis
+                            quam.Vivamus a ligula quam tesque et libero ut justo ultrices in.
+                        </p>
+                        <div class="row mt-5">
+                            <div class="restaurants__bestLeft col-6">
+                                <div class="restaurants__item">
+                                    <i class="fa fa-thumbs-up mb-4"></i>
+                                    <h3>Best Deals</h3>
+                                </div>
+                                <p>Lorem ipsum viverra feugiat. Pellen tesque libero justo.</p>
+                            </div>
+                            <div class="restaurants__bestRight col-6">
+                                <div class="restaurants__item">
+                                    <i class="fa fa-utensils mb-4"></i>
+                                    <h3>Best Food</h3>
+                                </div>
+                                <p>Lorem ipsum viverra feugiat. Pellen tesque libero justo.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- NEW -->
     <!-- SANG -->
     <section class="new"></section>
@@ -140,7 +180,7 @@
     <!-- BACK TO TOP -->
     <a href="#" class="backToTop"></a>
 
-    <!-- JS -->
+    <!-- JS SHOW CLOSE MENU -->
     <script>
         const openMenu = document.querySelector('.js-openMenu');
         const overlay = document.querySelector('.js-overlay');
