upload source code by sang

--- a/index.html
+++ b/index.html
@@ -163,7 +163,70 @@
     </section>
     <!-- NEW -->
     <!-- SANG -->
-    <section class="new"></section>
+    <section class="new">
+        <div class="container">
+            <div class="title text-center">
+                <p>What's New</p>
+                <h2>Popular Categories</h2>
+            </div>
+            <div class="row mt-lg-5">
+                <div class="new__item col-lg-4 col-6 my-4 mt-lg-0 mt-4">
+                    <div class="new__img">
+                        <img src="./img/g1.jpg" alt="g1">
+                    </div>
+                    <div class="new__text p-md-3 pl-md-5 p-4">
+                        <h3>Vegetarian</h3>
+                        <p>$350</p>
+                    </div>
+                </div>
+                <div class="new__item col-lg-4 col-6 my-4 mt-lg-0 mt-4">
+                    <div class="new__img">
+                        <img src="./img/g2.jpg" alt="g2">
+                    </div>
+                    <div class="new__text p-md-3 pl-md-5 p-4">
+                        <h3>Drinks</h3>
+                        <p>$550</p>
+                    </div>
+                </div>
+                <div class="new__item col-lg-4 col-6 my-4 mt-lg-0 mt-4">
+                    <div class="new__img">
+                        <img src="./img/g3.jpg" alt="g3">
+                    </div>
+                    <div class="new__text p-md-3 pl-md-5 p-4">
+                        <h3>Lunch</h3>
+                        <p>$650</p>
+                    </div>
+                </div>
+                <div class="new__item col-lg-4 col-6 my-4 mt-lg-0 mt-4">
+                    <div class="new__img">
+                        <img src="./img/g4.jpg" alt="g4">
+                    </div>
+                    <div class="new__text p-md-3 pl-md-5 p-4">
+                        <h3>Bakery</h3>
+                        <p>$550</p>
+                    </div>
+                </div>
+                <div class="new__item col-lg-4 col-6 my-4 mt-lg-0 mt-4">
+                    <div class="new__img">
+                        <img src="./img/g5.jpg" alt="g5">
+                    </div>
+                    <div class="new__text p-md-3 pl-md-5 p-4">
+                        <h3>Desserts</h3>
+                        <p>$750</p>
+                    </div>
+                </div>
+                <div class="new__item col-lg-4 col-6 my-4 mt-lg-0 mt-4">
+                    <div class="new__img">
+                        <img src="./img/g6.jpg" alt="g6">
+                    </div>
+                    <div class="new__text p-md-5 p-4">
+                        <h3>Pizza</h3>
+                        <p>$850</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- SERVICE -->
     <!-- SANG -->
     <section class="service"></section>
@@ -215,3 +278,5 @@
 </body>
 
 </html>
+
+<!-- bỏ bg-color đi , đúng ý bạn chưa dạ k cái bg nớ vẫn có nhưng nó nawmg trong vùng ảnh thôi ạà oke   -->
