upload source code by sang

--- a/Dark/index.html
+++ b/Dark/index.html
@@ -124,10 +124,7 @@
         <div class="container-fluid px-lg-0">
             <div class="row align-items-center">
                 <div class="restaurants__left col-lg-6 px-lg-0 pt-lg-0 pt-5">
-                    <div class="restaurants__img">
-                        <img src="./img/banner3.jpg" alt="">
-                    </div>
-                    <div class="overlay"></div>
+                    <div class="restaurants__img"></div>
                 </div>
                 <div class="restaurants__right col-lg-6 px-lg-4 py-lg-3 py-4">
                     <div class="restaurants__content p-md-5 p-3">
