--- a/Light/index.html
+++ b/Light/index.html
@@ -61,7 +61,7 @@
                             <i class="header__search fa fa-search"></i>
                         </form>
                     </nav>
-                    <i class="header__light-dark fa fa-sun"></i>
+                    <i class="header__light-dark fa fa-moon"></i>
                     <button id="openMenu" class="header__searchIcon">
                         <i class="fa fa-bars"></i>
                     </button>
