--- a/Dark/index.html
+++ b/Dark/index.html
@@ -224,7 +224,7 @@
                     <div class="new__img">
                         <img src="./img/g6.jpg" alt="g6">
                     </div>
-                    <div class="new__text p-md-5 p-4">
+                    <div class="new__text p-md-3 pl-md-5 p-4">
                         <h3>Pizza</h3>
                         <p>$850</p>
                     </div>
@@ -771,7 +771,7 @@
             } else {
                 document.getElementById("movetop").style.display = "none";
             }
-        }      
+        }
         function topFunction() {
             document.body.scrollTop = 0;
             document.documentElement.scrollTop = 0;
