--- a/Dark/index.html
+++ b/Dark/index.html
@@ -436,7 +436,7 @@
             </div>
             <div class="blog_service">
                 <div class="row">
-                    <div class="blog_item col-12 col-md-6 col-lg-4">
+                    <div class="blog_item col-12 col-md-6 col-lg-4 mt-5">
                         <div class="card">
                             <div class="card-img-top">
                                 <img src="./img/banner1.jpg" alt="">
@@ -465,7 +465,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="blog_item col-12 col-md-6 col-lg-4">
+                    <div class="blog_item col-12 col-md-6 col-lg-4 mt-5">
                         <div class="card">
                             <div class="card-img-top">
                                 <img src="./img/banner3.jpg" alt="">
@@ -494,7 +494,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="blog_item col-12 col-md-6 col-lg-4">
+                    <div class="blog_item col-12 col-md-6 col-lg-4 mt-5">
 
                         <div class="card">
                             <div class="card-img-top">
